# py_cmake

./: .gitignore  README.md  new_cxx_project.py  new_src_file.py  pymake.py
data/: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json
data/src/: CMakeLists.txt
data/test/: CMakeLists.txt
scripts/: new_cxx_project.py  new_src_dir.py  new_src_file.py
